--- a/blkjk/index.html
+++ b/blkjk/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="money_hud">
-        <h2>Balance: <span id="balance"></span></h2>
+        <h2>Balance: <span id="balance">100</span></h2>
         <h3>Current Bet: <span id="current_bet"></span></h3>
     </div>
     <div id="deck">
