added all in button

--- a/blkjk/index.html
+++ b/blkjk/index.html
@@ -57,6 +57,13 @@
                 <div class="chip-value">100</div>
             </button>
         </div>
+        <div class="chip-wrapper">
+            <button id="bet_all" class="chip">
+                <div id="counter_all" class="chip_counter">0</div>
+                <img src="images/all_in.jpg" alt="All">
+                <div class="chip-value">All In</div>
+            </button>
+        </div>
         <button id="confirm_bet">Confirm</button>
     </div>
     
