fixed all in chip image

--- a/blkjk/index.html
+++ b/blkjk/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="chip-wrapper">
             <button id="bet_all" class="chip">
-                <img src="images/all_in.jpg" alt="All">
+                <img src="images/bet_500.jpg" alt="All">
                 <div class="chip-value">All In</div>
             </button>
         </div>
