made deck dissappear when no cards are left

--- a/scoundrel/game.html
+++ b/scoundrel/game.html
@@ -30,13 +30,8 @@
 
     <section class="main-row" aria-label="Main row">
         <section class="deck-area placeholder" aria-label="Deck">
-            <div class="placeholder-label">Deck</div>
-
-            <div class="card-deck stacked" id="deck">
-            <div class="card facedown-card">
-                <img src="images/cards/facedown_card.jpg" alt="Deck" />
-            </div>
-            </div>
+            <div class="placeholder-label" id="deckLabel">Deck</div>
+            <div class="card-deck stacked" id="deck"></div>
         </section>
 
         <section class="room-area placeholder" aria-label="Room">
